tests/sksl/errors/VectorSlice.glsl
### Compilation failed:

error: 7: invalid arguments to 'half3' constructor (expected 3 scalars, but found 4)
error: 8: invalid arguments to 'half2' constructor (expected 2 scalars, but found 4)
error: 9: invalid argument to 'half' constructor (expected a number or bool, but found 'half4')
error: 12: invalid arguments to 'int3' constructor (expected 3 scalars, but found 4)
error: 13: invalid arguments to 'int2' constructor (expected 2 scalars, but found 4)
error: 14: invalid argument to 'int' constructor (expected a number or bool, but found 'int4')
error: 17: invalid arguments to 'bool3' constructor (expected 3 scalars, but found 4)
error: 18: invalid arguments to 'bool2' constructor (expected 2 scalars, but found 4)
error: 19: invalid argument to 'bool' constructor (expected a number or bool, but found 'bool4')
9 errors
